GNOME Bugzilla – Bug 748594
opus: fix includes and compilation against opus in non-standard prefix
Last modified: 2015-04-28 16:28:08 UTC
gst-uninstalled -bad compilation fails with opus plugin CC libgstopus_la-gstopus.lo In file included from gstopus.c:24:0: gstopusdec.h:27:35: fatal error: opus/opus_multistream.h: No such file or directory #include <opus/opus_multistream.h> ^ compilation terminated. the file is in the expected path: ls -la /root/gst/master/prefix/include/opus/opus_multistream.h -rw-r--r-- 1 root root 33500 Apr 28 16:01 /root/gst/master/prefix/include/opus/opus_multistream.h but is not automagically picked pkg-config --libs --cflags opus -I/root/gst/master/prefix/include/opus -L/root/gst/master/prefix/lib -lopus this can be fixed changing #include <opus/opus_multistream.h> in #include <opus_multistream.h> not sure if this is a bug in gstreamer opus plugin or in the opus pkgconfig
I think it's a bug in the includes that just happens to work if opus is installed in the default prefix. commit 35808c27fa28c71cad73641b5886d82d2f978301 Author: Tim-Philipp Müller <tim@centricular.com> Date: Tue Apr 28 17:24:04 2015 +0100 opus: fix includes and compilation against opus in non-standard prefix https://bugzilla.gnome.org/show_bug.cgi?id=748594