opus: fix includes and compilation against opus in non-standard prefix

https://bugzilla.gnome.org/show_bug.cgi?id=748594